--- a/index.html
+++ b/index.html
@@ -10,20 +10,23 @@
     <!--horizontal rule-->
     <hr/>
     <!--Resumen-->
-    <p><strong>Grace Brewster Murray Hopper</strong> (née <strong>Murray</strong>; December 9, 1906 – January 1, 1992)
+    <p><strong>Grace Brewster Murray Hopper</strong (née <strong>Murray</strong>; December 9, 1906 – January 1, 1992)
     was an American <a href="https://en.wikipedia.org/wiki/Computer_scientist"
-    target="_blank">computer scientist</a> and United States Navy rear admiral.
-    <mark>One of the first programmers of the Harvard Mark I computer</mark>, she was a pioneer of
-    computeOne of the first programmers of the Harvard Mark I computerr programming who invented one of the first compiler related tools.
+    target="_blank">computer scientist</a> and <a href="https://en.wikipedia.org/wiki/United_States_Navy">United States
+    Navy</a> rear admiral.<mark>One of the first programmers of the <a href="https://en.wikipedia.org/wiki/Harvard_Mark_I">Harvard
+    Mark I</a> computer</mark>, she was a pioneer of computer programming who
+    invented one of the first <a href="https://en.wikipedia.org/wiki/Compiler">compiler</a>
+    related tools.
     She popularized the idea of machine-independent programming languages, which led
-    to the development of COBOL, an early high-level programming language still
-    in use today.</p>
+    to the development of COBOL, an early <a href="https://en.wikipedia.org/wiki/High-level_programming_language">high-
+    level programming language</a> still in use today.</p>
     <p>Hopper had attempted to enlist in the Navy during World War II, but she was
     rejected by the military because she was 34 years of age and too old to enlist.
     She instead joined the Navy Reserves. Hopper began her computing career when
     she worked on the Harvard Mark I team that was led by Howard H. Aiken.
     In 1949, she joined the Eckert–Mauchly Computer Corporation and was part of
-    the development team that designed the UNIVAC I computer in 1944.
+    the development team that designed the <a href="https://en.wikipedia.org/wiki/UNIVAC_I">UNIVAC
+    I</a> computer in 1944.
     It was at Eckert–Mauchly that she began developing the compiler.
     She believed that computer code could be written in English by using a
     programming language that was based on English words. The compiler would convert
@@ -34,17 +37,17 @@
     programming, and she led the release of some of the first compiled languages
     like FLOW-MATIC. In 1959, she participated in the CODASYL consortium, which
     consulted Hopper to guide them in creating a machine-independent programming
-    language. This led to the COBOL language, which was inspired by her idea of a
-    language being based on English words. In 1966, she retired from the Naval
-    Reserve, but in 1967, the Navy recalled her to active duty. She retired from
-    the Navy in 1986 and found work as a consultant for the Digital Equipment
+    language. This led to the <a href="https://en.wikipedia.org/wiki/COBOL">COBOL</a>
+    language, which was inspired by her idea of a language being based on English words.
+    In 1966, she retired from the Naval Reserve, but in 1967, the Navy recalled her to active duty.
+    She retired from the Navy in 1986 and found work as a consultant for the Digital Equipment
     Corporation, sharing her computing experiences.</p>
     <p>Owing to her accomplishments and her naval rank, she was sometimes referred
     to as "Amazing Grace".The U.S. Navy Arleigh Burke-class guided-missile destroyer
     USS Hopper was named for her, as was the Cray XE6 "Hopper" supercomputer at NERSC.
     During her lifetime, Hopper was awarded 40 honorary degrees from universities across
-    the world. In 1991, she received the National Medal of Technology.
-    On November 22, 2016, she was posthumously awarded the Presidential Medal of
+    the world. In 1991, she received the <a href="https://en.wikipedia.org/wiki/National_Medal_of_Technology_and_Innovation">
+    National Medal of Technology</a>. On November 22, 2016, she was posthumously awarded the Presidential Medal of
     Freedom by President Barack Obama.</p>
     <!--carrera-->
     <h3>Career</h3>
@@ -92,6 +95,11 @@
           <th>Allegiance</th>
           <td><img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/23px-Flag_of_the_United_States.svg.png"
           alt="EEUU"> United States of America</td>
+        </tr>
+        <tr>
+          <th>Service/branch</th>
+          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Flag_of_the_United_States_Navy.svg/23px-Flag_of_the_United_States_Navy.svg.png"
+          alt="Navy"><a href="https://en.wikipedia.org/wiki/United_States_Navy">United States Navy</a></td>
         </tr>
 
       </tbody>
