--- a/index.html
+++ b/index.html
@@ -10,45 +10,45 @@
     <!--horizontal rule-->
     <hr/>
     <!--Resumen-->
-    <p><strong>Grace Brewster Murray Hopper</strong (née <strong>Murray</strong>; December 9, 1906 – January 1, 1992)
+    <p><strong>Grace Brewster Murray Hopper</strong> (née <strong>Murray</strong>; December 9, 1906 – January 1, 1992)
     was an American <a href="https://en.wikipedia.org/wiki/Computer_scientist"
     target="_blank">computer scientist</a> and <a href="https://en.wikipedia.org/wiki/United_States_Navy">United States
-    Navy</a> rear admiral.<mark>One of the first programmers of the <a href="https://en.wikipedia.org/wiki/Harvard_Mark_I">Harvard
+    Navy</a> <a href="https://en.wikipedia.org/wiki/Rear_admiral_(United_States)">rear admiral</a>.<mark>One of the first programmers of the <a href="https://en.wikipedia.org/wiki/Harvard_Mark_I">Harvard
     Mark I</a> computer</mark>, she was a pioneer of computer programming who
     invented one of the first <a href="https://en.wikipedia.org/wiki/Compiler">compiler</a>
     related tools.
     She popularized the idea of machine-independent programming languages, which led
-    to the development of COBOL, an early <a href="https://en.wikipedia.org/wiki/High-level_programming_language">high-
+    to the development of <a href="https://en.wikipedia.org/wiki/COBOL">COBOL</a>, an early <a href="https://en.wikipedia.org/wiki/High-level_programming_language">high-
     level programming language</a> still in use today.</p>
-    <p>Hopper had attempted to enlist in the Navy during World War II, but she was
+    <p>Hopper had attempted to enlist in the Navy during <a href="https://en.wikipedia.org/wiki/World_War_II">World War II</a>, but she was
     rejected by the military because she was 34 years of age and too old to enlist.
     She instead joined the Navy Reserves. Hopper began her computing career when
-    she worked on the Harvard Mark I team that was led by Howard H. Aiken.
-    In 1949, she joined the Eckert–Mauchly Computer Corporation and was part of
+    she worked on the Harvard Mark I team that was led by <a href="https://en.wikipedia.org/wiki/Howard_H._Aiken">Howard H. Aiken.</a>
+    In 1949, she joined the <a href="https://en.wikipedia.org/wiki/Eckert%E2%80%93Mauchly_Computer_Corporation">Eckert–Mauchly Computer Corporation</a> and was part of
     the development team that designed the <a href="https://en.wikipedia.org/wiki/UNIVAC_I">UNIVAC
     I</a> computer in 1944.
     It was at Eckert–Mauchly that she began developing the compiler.
     She believed that computer code could be written in English by using a
     programming language that was based on English words. The compiler would convert
-    that code into machine code that would be understood by computers. By 1952,
-    Hopper finished her compiler, which was written for the A-0 System programming
+    that code into <a href="https://en.wikipedia.org/wiki/Machine_code">machine code</a> that would be understood by computers. By 1952,
+    Hopper finished her compiler, which was written for the <a href="https://en.wikipedia.org/wiki/A-0_System">A-0 System</a> programming
     language.</p>
     <p>In 1954, Eckert–Mauchly chose Hopper to lead their department for automatic
     programming, and she led the release of some of the first compiled languages
-    like FLOW-MATIC. In 1959, she participated in the CODASYL consortium, which
+    like <a href="https://en.wikipedia.org/wiki/FLOW-MATIC">FLOW-MATIC</a>. In 1959, she participated in the <a href="https://en.wikipedia.org/wiki/CODASYL">CODASYL</a> consortium, which
     consulted Hopper to guide them in creating a machine-independent programming
     language. This led to the <a href="https://en.wikipedia.org/wiki/COBOL">COBOL</a>
     language, which was inspired by her idea of a language being based on English words.
     In 1966, she retired from the Naval Reserve, but in 1967, the Navy recalled her to active duty.
-    She retired from the Navy in 1986 and found work as a consultant for the Digital Equipment
-    Corporation, sharing her computing experiences.</p>
+    She retired from the Navy in 1986 and found work as a consultant for the Digital <a href="https://en.wikipedia.org/wiki/Digital_Equipment_Corporation">Equipment
+    Corporation</a>, sharing her computing experiences.</p>
     <p>Owing to her accomplishments and her naval rank, she was sometimes referred
-    to as "Amazing Grace".The U.S. Navy Arleigh Burke-class guided-missile destroyer
-    USS Hopper was named for her, as was the Cray XE6 "Hopper" supercomputer at NERSC.
+    to as "Amazing Grace".The U.S. Navy <a href="https://en.wikipedia.org/wiki/Arleigh_Burke-class_destroyer">Arleigh Burke-class</a> guided-missile destroyer
+    <a href="https://en.wikipedia.org/wiki/USS_Hopper">USS Hopper</a> was named for her, as was the <a href="https://en.wikipedia.org/wiki/Cray_XE6">Cray XE6</a> "Hopper" supercomputer at <a href="https://en.wikipedia.org/wiki/NERSC">NERSC</a>.
     During her lifetime, Hopper was awarded 40 honorary degrees from universities across
     the world. In 1991, she received the <a href="https://en.wikipedia.org/wiki/National_Medal_of_Technology_and_Innovation">
-    National Medal of Technology</a>. On November 22, 2016, she was posthumously awarded the Presidential Medal of
-    Freedom by President Barack Obama.</p>
+    National Medal of Technology</a>. On November 22, 2016, she was posthumously awarded the <a href="https://en.wikipedia.org/wiki/Presidential_Medal_of_Freedom">Presidential Medal</a> of
+    Freedom by President <a href="https://en.wikipedia.org/wiki/Barack_Obama">Barack Obama.</a></p>
     <!--carrera-->
     <h3>Career</h3>
     <ol>
@@ -101,6 +101,32 @@
           <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Flag_of_the_United_States_Navy.svg/23px-Flag_of_the_United_States_Navy.svg.png"
           alt="Navy"><a href="https://en.wikipedia.org/wiki/United_States_Navy">United States Navy</a></td>
         </tr>
+        <tr>
+          <th>Years of service</th>
+          <td>1943–1966, 1967–1971, 1972–1986</td>
+        </tr>
+        <tr>
+          <th>Rank</th>
+          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/US-O7_insignia.svg/24px-US-O7_insignia.svg.png"
+          alt="star"><a href="https://en.wikipedia.org/wiki/Rear_admiral_(United_States)">Rear admiral</a> (lower half)</td>
+        </tr>
+        <tr>
+          <th>Awards</th>
+          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Defense_Distinguished_Service_Medal_ribbon.svg/22px-Defense_Distinguished_Service_Medal_ribbon.svg.png"
+          alt="defense"><a href="https://en.wikipedia.org/wiki/Defense_Distinguished_Service_Medal">Defense Distinguished Service Medal</a></td>
+        </tr>
+        <tr>
+          <th> </th>
+          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Legion_of_Merit_ribbon.svg/22px-Legion_of_Merit_ribbon.svg.png"
+          alt="merit"><a href="https://en.wikipedia.org/wiki/Legion_of_Merit">Legion of Merit</a></td>
+        </tr>
+        <tr>
+          <th> </th>
+          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Meritorious_Service_Medal_ribbon.svg/22px-Meritorious_Service_Medal_ribbon.svg.png"
+          alt="meritorious"><a href="https://en.wikipedia.org/wiki/Meritorious_Service_Medal_(USA)">Meritorious Service Medal</a></td>
+        </tr>
+        
+
 
       </tbody>
     </table>
