--- a/index.html
+++ b/index.html
@@ -125,7 +125,37 @@
           <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Meritorious_Service_Medal_ribbon.svg/22px-Meritorious_Service_Medal_ribbon.svg.png"
           alt="meritorious"><a href="https://en.wikipedia.org/wiki/Meritorious_Service_Medal_(USA)">Meritorious Service Medal</a></td>
         </tr>
-        
+        <tr>
+          <th> </th>
+          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/American_Campaign_Medal_ribbon.svg/22px-American_Campaign_Medal_ribbon.svg.png"
+          alt="Medal"><a href="https://en.wikipedia.org/wiki/American_Campaign_Medal"> American Campaign Medal</a></td>
+        </tr>
+        <tr>
+          <th> </th>
+          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/World_War_II_Victory_Medal_ribbon.svg/22px-World_War_II_Victory_Medal_ribbon.svg.png"
+          alt="victory"><a href="https://en.wikipedia.org/wiki/World_War_II_Victory_Medal">World War II Victory Medal</a></td>
+        </tr>
+        <tr>
+          <th> </th>
+          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/National_Defense_Service_Medal_ribbon.svg/22px-National_Defense_Service_Medal_ribbon.svg.png"
+          alt="defense"><a href="https://en.wikipedia.org/wiki/National_Defense_Service_Medal">National Defense Service Medal</a></td>
+        </tr>
+        <tr>
+          <th> </th>
+          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/AFRM_with_Hourglass_Device_%28Silver%29.jpg/22px-AFRM_with_Hourglass_Device_%28Silver%29.jpg"
+          alt="Armed"><a href="https://en.wikipedia.org/wiki/Armed_Forces_Reserve_Medal">Armed Forces Reserve Medal</a> with two <a href="https://en.wikipedia.org/wiki/Hourglass_Device">Hourglass Devices</a></td>
+        </tr>
+        <tr>
+          <th> </th>
+          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/Naval_Reserve_Medal_ribbon.svg/22px-Naval_Reserve_Medal_ribbon.svg.png"
+          alt="Naval"><a href="https://en.wikipedia.org/wiki/Naval_Reserve_Medal">Naval Reserve Medal</a></td>
+        </tr>
+        <tr>
+          <th> </th>
+          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/54/Presidential_Medal_of_Freedom_%28ribbon%29.png/22px-Presidential_Medal_of_Freedom_%28ribbon%29.png"
+          alt="Freedom"><a href="https://en.wikipedia.org/wiki/Presidential_Medal_of_Freedom">Presidential Medal of Freedom</a> (posthumous)</td>
+        </tr>
+
 
 
       </tbody>
