--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>Grace Hopper</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
   </head>
   <body>
     <!--título-->
-    <h1>Grace Hopper</h1>
+    <header>
+          <h1>Grace Hopper</h1>
     <!--horizontal rule-->
     <hr/>
+
+    </header>
+
     <!--Resumen-->
+    <main class="biography">
     <p><strong>Grace Brewster Murray Hopper</strong> (née <strong>Murray</strong>; December 9, 1906 – January 1, 1992)
     was an American <a href="https://en.wikipedia.org/wiki/Computer_scientist"
     target="_blank">computer scientist</a> and <a href="https://en.wikipedia.org/wiki/United_States_Navy">United States
-    Navy</a> <a href="https://en.wikipedia.org/wiki/Rear_admiral_(United_States)">rear admiral</a>.<mark>One of the first programmers of the <a href="https://en.wikipedia.org/wiki/Harvard_Mark_I">Harvard
-    Mark I</a> computer</mark>, she was a pioneer of computer programming who
+    Navy</a> <a href="https://en.wikipedia.org/wiki/Rear_admiral_(United_States)">rear admiral</a>.<em>One of the first programmers</em> of the <a href="https://en.wikipedia.org/wiki/Harvard_Mark_I">Harvard
+    Mark I</a> computer, she was a pioneer of computer programming who
     invented one of the first <a href="https://en.wikipedia.org/wiki/Compiler">compiler</a>
     related tools.
     She popularized the idea of machine-independent programming languages, which led
@@ -59,14 +66,19 @@
     </ol>
     <!--frase-->
     <h2>Phrase</h2>
-    <blockquote cite="http://www.azquotes.com/quote/553883">
-      Humans are allergic to change. They love to say, 'We've always done it this way.
+    <blockquote id="quote"cite="http://www.azquotes.com/quote/553883">
+      "Humans are allergic to change. They love to say, 'We've always done it this way.
       ' I try to fight that. That's why I have a clock on my wall that runs counter
-      -clockwise.
+      -clockwise."
     </blockquote>
+    <!--redireccionando a la página de information-->
+    <a href="information.html" target="_blank">See more</a>
+
+    </main>
 
     <!--tabla-->
-    <table>
+    <aside class="summary">
+    <table class="summary-table">
       <thead>
         <tr>
           <th colspan="2">Grace Murray Hopper</th>
@@ -77,6 +89,7 @@
           <td colspan="2">
             <img src="img/grace-hopper.jpg" alt="Grace Hopper">
             <p>Rear Admiral Grace M. Hopper, 1984</p>
+            <hr>
           </td>
         </tr>
         <tr>
@@ -113,7 +126,7 @@
         <tr>
           <th>Awards</th>
           <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Defense_Distinguished_Service_Medal_ribbon.svg/22px-Defense_Distinguished_Service_Medal_ribbon.svg.png"
-          alt="defense"><a href="https://en.wikipedia.org/wiki/Defense_Distinguished_Service_Medal">Defense Distinguished Service Medal</a></td>
+          alt="defense"><a href="https://en.wikipedia.org/wiki/Defense_Distinguished_Service_Medal">Defense Distinguished Service <br> Medal</a></td>
         </tr>
         <tr>
           <th> </th>
@@ -143,7 +156,8 @@
         <tr>
           <th> </th>
           <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/AFRM_with_Hourglass_Device_%28Silver%29.jpg/22px-AFRM_with_Hourglass_Device_%28Silver%29.jpg"
-          alt="Armed"><a href="https://en.wikipedia.org/wiki/Armed_Forces_Reserve_Medal">Armed Forces Reserve Medal</a> with two <a href="https://en.wikipedia.org/wiki/Hourglass_Device">Hourglass Devices</a></td>
+          alt="Armed"><a href="https://en.wikipedia.org/wiki/Armed_Forces_Reserve_Medal">Armed Forces Reserve Medal</a> <br>
+          with two <a href="https://en.wikipedia.org/wiki/Hourglass_Device">Hourglass Devices</a></td>
         </tr>
         <tr>
           <th> </th>
@@ -153,17 +167,13 @@
         <tr>
           <th> </th>
           <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/54/Presidential_Medal_of_Freedom_%28ribbon%29.png/22px-Presidential_Medal_of_Freedom_%28ribbon%29.png"
-          alt="Freedom"><a href="https://en.wikipedia.org/wiki/Presidential_Medal_of_Freedom">Presidential Medal of Freedom</a> (posthumous)</td>
+          alt="Freedom"><a href="https://en.wikipedia.org/wiki/Presidential_Medal_of_Freedom">Presidential Medal of Freedom</a> <br>
+          (posthumous)</td>
         </tr>
-
-
 
       </tbody>
     </table>
-
-    <!--redireccionando a la página de information-->
-    <a href="information.html" target="_blank">See more</a>
-
+  </aside>
 
   </body>
 </html>
