--- a/information.html
+++ b/information.html
@@ -3,19 +3,57 @@
   <head>
     <meta charset="utf-8">
     <title>Info</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
   <body>
     <!--Título principal-->
-    <h1>Early life and education</h1>
-    <!--horizontal rule-->
-    <hr/>
-
-    <p>Hopper was born in New York City. She was the eldest of three children. 
+    <header>
+      <h1>Early life and education</h1>
+      <!--horizontal rule-->
+      <hr/>
+    </header>
+    <main class="biography">
+    <p>Hopper was born in New York City. She was the eldest of three children.
     Her parents, Walter Fletcher Murray and Mary Campbell Van Horne, were of Scottish
-    and Dutch descent, and attended West End Collegiate Church.[10] Her great-grandfather,
-    Alexander Wilson Russell, an admiral in the US Navy, fought in the Battle of Mobile
+    and Dutch descent, and attended <a href="https://en.wikipedia.org/wiki/West_End_Collegiate_Church">West End Collegiate Church</a>.
+    [10] Her great-grandfather, Alexander Wilson Russell, an admiral in the US Navy, fought in the Battle of Mobile
     Bay during the Civil War.</p>
+    <p>Grace was very curious as a child; this was a lifelong trait. At the age of seven,
+    she decided to determine how an alarm clock worked and dismantled seven alarm clocks before
+    her mother realized what she was doing (she was then limited to one clock).[11] For her
+    preparatory school education, she attended the <a href="https://en.wikipedia.org/wiki/Wardlaw-Hartridge_School">Hartridge School</a>
+    in Plainfield, New Jersey. Hopper was initially rejected for early admission to Vassar College at age 16 (her test
+    scores in Latin were too low), but she was admitted the following year.
+    She graduated Phi Beta Kappa from Vassar in 1928 with a bachelor's degree in mathematics
+    and physics and earned her master's degree at Yale University in 1930.</p>
+    <p>In 1934, she earned a Ph.D. in mathematics from Yale[12] under the direction of Øystein Ore.
+    [13][14] Her dissertation, New Types of Irreducibility Criteria, was published that same year.
+    [15] Hopper began teaching mathematics at Vassar in 1931, and was promoted to associate professor in 1941.[16]</p>
+    <p>She was married to <a href="https://en.wikipedia.org/wiki/New_York_University">New York University</a> professor Vincent Foster Hopper (1906–76) from 1930 until their divorce in 1945.
+    [13][17] She did not marry again, but chose to retain his surname.</p>
 
+    <h2>Quote</h2>
+    <blockquote id="phrase"cite="http://www.azquotes.com/quote/653922">
+      "To me programming is more than an important practical art.
+      It is also a gigantic undertaking in the foundations of knowledge."
+
+    </blockquote>
+   </main>
+   <aside class="summary">
+     <table class="summary-table">
+       <thead>
+         <tr>
+           <th colspan="2">Amazing grace</th>
+         </tr>
+       </thead>
+       <tbody>
+         <tr>
+           <td colspan="2">
+             <img src="img/grace.jpg" alt="Grace Hopper" width="250px" height="330px">
+           </td>
+     </table>
+   </aside>
 
   </body>
 </html>
